--- a/loginlibrary/src/main/AndroidManifest.xml
+++ b/loginlibrary/src/main/AndroidManifest.xml
@@ -1,2 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.loginlibrary" />
+    package="com.example.loginlibrary">
+
+    <application>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name">
+
+        </activity>
+    </application>
+</manifest>
